--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						</section>
 						<section>
 							<h2>Specifications</h2>
-							<p>Insert specs here</p>
+							<p>For 45W MacBook Pro Chargers</p>
 						</section>
 					</div><!-- /page-inner -->
 				</div><!-- /page-right -->
@@ -67,7 +67,7 @@
 						</section>
 						<section>
 							<h2>Specifications</h2>
-							<p>Insert specs here</p>
+							<p>(2.5cm-4.5cm) x 6cm x 3.5cm</p>
 						</section>
 					</div><!-- /page-inner -->
 				</div><!-- /page-left -->
